<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.johnson.gym.ui.viewmodel.DashboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding">

        <Button
            android:id="@+id/btn_start_workout"
            android:layout_width="0dp"
            android:layout_height="@dimen/dashboard_btn_height"
            android:backgroundTint="@color/dashboard_btn_tint"
            android:text="@string/start_workout"
            app:layout_constraintWidth_percent="0.45"
            app:layout_constraintEnd_toStartOf="@id/btn_view_workout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"/>

        <Button
            android:id="@+id/btn_view_workout"
            android:layout_width="0dp"
            android:layout_height="@dimen/dashboard_btn_height"
            android:backgroundTint="@color/dashboard_btn_tint"
            android:text="@string/view_workouts"
            app:layout_constraintWidth_percent="0.45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_start_workout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"/>

        <Button
            android:id="@+id/btn_create_workout"
            android:layout_width="0dp"
            android:layout_height="@dimen/dashboard_btn_height"
            android:backgroundTint="@color/dashboard_btn_tint"
            android:text="@string/create_workout"
            app:layout_constraintWidth_percent="0.45"
            app:layout_constraintStart_toStartOf="@id/btn_start_workout"
            app:layout_constraintTop_toBottomOf="@id/btn_start_workout" />

        <Button
            android:id="@+id/btn_add_exercise"
            android:layout_width="0dp"
            android:layout_height="@dimen/dashboard_btn_height"
            android:backgroundTint="@color/dashboard_btn_tint"
            android:text="@string/create_exercise"
            app:layout_constraintStart_toEndOf="@id/btn_create_workout"
            app:layout_constraintWidth_percent="0.45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_start_workout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>