<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.johnson.gym.ui.viewmodel.CreateExerciseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        tools:context=".ui.fragment.CreateExerciseFragment">

        <TextView
            android:id="@+id/title"
            style="@style/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/large_padding"
            android:text="@string/create_a_new_exercise"
            android:textSize="@dimen/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Exercise name -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_name_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:hint="@string/name_input_hint"
            android:paddingBottom="@dimen/default_padding"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.exerciseName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Exercise reps -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_reps_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:hint="@string/reps"
            android:minWidth="70dp"
            android:paddingBottom="@dimen/default_padding"
            android:textAlignment="center"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_input"
            app:layout_constraintWidth_percent="0.45">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="@={viewModel.reps}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- sets -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_sets_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:hint="@string/sets"
            android:paddingBottom="@dimen/default_padding"
            android:textAlignment="center"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_input"
            app:layout_constraintWidth_percent="0.45">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="@={viewModel.sets}" />

        </com.google.android.material.textfield.TextInputLayout>


        <!-- tracking unit -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_weight_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:hint="@string/weight_kg"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:textAlignment="center"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintStart_toEndOf="@+id/tv_rest_input"
            app:layout_constraintTop_toBottomOf="@id/tv_reps_input"
            app:layout_constraintWidth_percent="0.40">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="@={viewModel.weight}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_number_input"
            android:gravity="center"
            app:entries="@{viewModel.unitList}"
            app:layout_constraintBottom_toBottomOf="@id/tv_weight_input"
            app:layout_constraintStart_toEndOf="@id/tv_weight_input"
            app:layout_constraintTop_toBottomOf="@id/tv_reps_input" />

        <!-- tracking unit -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_rest_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:hint="@string/rest"
            android:textAlignment="center"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reps_input"
            app:layout_constraintWidth_percent="0.40">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="@={viewModel.reps}" />

        </com.google.android.material.textfield.TextInputLayout>


        <!-- notes-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:background="@color/note_bg"
            android:minHeight="200dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_rest_input">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_padding"
                android:text="@string/notes"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@={viewModel.notes}"
                android:textSize="16sp"
                tools:text="This is a note"
                android:hint="Enter any additional notes"
                android:inputType="textLongMessage" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_workout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/btn_submit"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>